# lda-thematic-analysis

./: .gitignore  LDA_App.spec  README.md  main.py  pyproject.toml
ui/: __init__.py  app_state.py  step1_download.py  step2_tagger.py  step3_findbest.py  step4_fitlda.py
workers/: download_worker.py  findbest_worker.py  fitlda_worker.py  tagger_worker.py
