[project]
name = "lda-gui-integrated"
version = "1.0.0"
description = "整合式 LDA 中文主題模型分析 GUI"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.0",
    "ckip-transformers>=0.3.4",
    "huggingface-hub>=0.20.0",
    "tomotopy>=0.12.0",
    "pandas>=3.0.1",
    "openpyxl>=3.1.5",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "matplotlib>=3.10.8",
    "pyinstaller>=6.19.0",
    "tqdm>=4.67.3",
]
